[package]
name = "wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.7" }
serde_json = "1"
http = "0.2.8"
tokio = {version = "1.0", features = ["full"] }
dbus = "0.9.6"
image = "0.24.3"